# FindTheBear-Jeu-de-Course-DDJV

./: .gitignore  CMakeLists.txt  CleanAll.bat  DeleteSubDirectory.bat  Filters.cmake  README.md  rebuiltCompiler.bat
Include/: MoteurPhysX.lib
ressources/: PetitMoteur3D.aps
ressources/TerrainGenerator/TerrainGenerator/: Main.cpp  RandomGenerateur.h  grande_carte_2.txt  grande_carte_3.txt  grande_carte_4.txt  map_test.txt  map_test_2.txt  moyenne_carte.txt  test.txt  tres_grande_map.txt
ressources/assets/bear/bear3/: bear3.mtl
ressources/assets/bear/choupibear/: choupibear.mtl
ressources/assets/cloud/: cloud.mtl
ressources/assets/cube/: bear.dds  cubeDos.mtl  cubeUno.mtl
ressources/assets/mysterybox/: MysteryBox.mtl  rewards.dds
ressources/assets/sandwatch/sandwatch1/: Sand Watch.fbx  Sand_Watch_tri.mtl  Sand_Watch_tri_back.mtl  sandwatch.blend
ressources/assets/skybox/: skybox.mtl
ressources/assets/tree/: Lowpoly_tree_sample.mtl  Lowpoly_tree_sample2.mtl  Lowpoly_tree_sample3.mtl
ressources/terrains/: 200_200.txt  250_250.txt  300_300.txt  grande_carte_5.txt  heightmap.txt  nouveau_test.txt  super_200_200.txt  super_carte.txt  super_carte_moitie.txt
ressources/textures/: Grass.dds  MainMenu.dds  Star.dds  brick.dds  brick2.dds  brickNM2.dds  brickblack.dds  brickblackNM.dds  grassNM.dds
src/: AfficheurSprite.cpp  AfficheurSprite.h  AfficheurTexte.cpp  AfficheurTexte.h  Boost.cpp  Boost.h  CAssimpLoader.cpp  CAssimpLoader.h  CFileLoader.h  CScene.cpp  CScene.h  DIManipulateur.cpp  DIManipulateur.h  EndMenu.cpp  EndMenu.h  FioleDeTemps.cpp  FioleDeTemps.h  GameManager.cpp  GameManager.h  GameState.h  HUD.cpp  HUD.h  Horloge.cpp  Horloge.h  ISerializable.h  Item.cpp  Item.h  Logger.cpp  Logger.h  MainMenu.cpp  MainMenu.h  Material.cpp  Material.h  Menu.cpp  Minuteur.cpp  Moteur.h  MoteurWindows.cpp  MoteurWindows.h  OptionsMenu.cpp  OptionsMenu.h  (+27 more)
src/Camera/: CCamera.cpp  CCamera.h  FrustrumView.cpp  FrustrumView.h  Lumiere.cpp  Lumiere.h  LumiereManager.cpp  LumiereManager.h
src/Component/: BillboardMeshComponent.cpp  BillboardMeshComponent.h  CamFirstPersonComponent.cpp  CamFirstPersonComponent.h  CamFreeInputComponent.cpp  CamFreeInputComponent.h  CamInputComponent.h  CamThirdPersonInputComponent.cpp  CamThirdPersonInputComponent.h  InputComponent.h  InputMenuComponent.cpp  InputMenuComponent.h  InputPlayerComponent.cpp  InputPlayerComponent.h  MeshComponent.cpp  MeshComponent.h  PhysicComponent.h  PhysicDynamicComponent.cpp  PhysicDynamicComponent.h  PhysicPlayerComponent.cpp  PhysicPlayerComponent.h  PhysicTerrainComponent.cpp  PhysicTerrainComponent.h  PhysicTriggerComponent.cpp  PhysicTriggerComponent.h
src/Formes/: Arbre.h  Billboard.cpp  Billboard.h  Bloc.cpp  Bloc.h  CGameObject.h  CSimpleGameObject.cpp  CSimpleGameObject.h  CSommet.cpp  CSommet.h  CTerrain.cpp  CTerrain.h  Chateau.cpp  Chateau.h  Cone.cpp  Cone.h  Cylindre.cpp  Cylindre.h  Orientation.cpp  Orientation.h  ShadersParams.h  Sphere.cpp  Sphere.h
src/shaders/: ChateauNM.fx  MiniPhong.fx  MiniPhongSM.fx  PostEffect.fx  Skybox.fx  SkyboxET.fx  Sprite1.fx  Terrain.fx  TerrainNM.fx  TerrainSM.fx
